Can finish race and store it;s points!

--- a/SimTECH/SimTECH/Pages/Season/AddEntrants.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrants.razor
@@ -365,6 +365,16 @@
     private bool _disableNext = false;
     private int _currentStep = 0;
 
+    // Underneath is an ID to confirm if it works
+    //protected MudDropContainer<EditSeasonTeamModel> teamDropper
+    //{
+    //    get => _dropperTeams;
+    //    set
+    //    {
+    //        _dropperTeams = value;
+    //    }
+    //}
+
     protected override async Task OnInitializedAsync()
     {
         Season = await SeasonService.GetSeasonById(SeasonId);
