--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -14,8 +14,8 @@
             </MudText>
             <MudText>weather: @Model.Weather</MudText>
             <MudText>Laps = @(lapsRaced) / @(lapCount)</MudText>
-                <MudSpacer />
-                @if (lapsRaced == lapCount)
+            <MudSpacer />
+            @if (lapsRaced == lapCount)
             {
                 <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
             }
@@ -58,10 +58,11 @@
                     @context.TyreLife
                 </span>
             </MudTd>
-            @for (int i = 1; i <= 5; i++)
+            @for (int i = 0; i < 4; i++)
             {
-                <MudTd>-</MudTd>
+                <MudTd></MudTd>
             }
+            <MudTd>@context.LapSum</MudTd>
             <MudTd>
                 @if (context.Status == RaceStatus.Racing)
                 {
@@ -89,6 +90,8 @@
 
     public RaceModel Model { get; set; }
 
+    private Dictionary<int, int> allotments;
+
     private bool loading = true;
 
     private int lapsRaced = 0;
@@ -104,6 +107,7 @@
     protected override async Task OnInitializedAsync()
     {
         Model = await _raceService.RetrieveRaceModel(RaceId);
+        allotments = Model.Season.PointAllotments.ToDictionary(e => e.Position, e => e.Points);
 
         mistakeMinCost = -30 * lapCount;
         mistakeMaxCost = -20 * lapCount;
@@ -258,12 +262,17 @@
 
     private async Task Finish()
     {
+        var fastestLapDriver = Model.RaceDrivers.Where(e => e.LapScores.Any()).OrderByDescending(e => e.LapScores.Max()).First();
+
         var finishedRace = Model.ToFinishedRace();
-        var finishedResults = Model.RaceDrivers.Select(e => e.ToResult()).ToList();
+        var finishedResults = Model.RaceDrivers.Select(e => e.ToResult(RaceId)).ToList();
+        var scoredPoints = Model.RaceDrivers
+            .Select(e => e.ToScoredPoints(allotments, Model.Season.PointsPole, Model.Season.PointsFastestLap, e.ResultId == fastestLapDriver.ResultId))
+            .ToList();
 
         // Should be removed if it is done per advance
         await PersistLapScores();
 
-        await _raceService.FinishRace(finishedRace, finishedResults);
+        await _raceService.FinishRace(finishedRace, finishedResults, scoredPoints);
     }
 }
