--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -274,5 +274,7 @@
         await PersistLapScores();
 
         await _raceService.FinishRace(finishedRace, finishedResults, scoredPoints);
+
+        Nav.NavigateTo($"/overview/{Model.Season.Id}/3"); // 3 = standingspanel
     }
 }
