updated a few editors

--- a/SimTECH/SimTECH/Pages/Factors/StrategyEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/StrategyEditor.razor
@@ -1,11 +1,11 @@
 ﻿<MudDialog>
     <TitleContent>
         <MudText>
-            Add new strategy
+            Add new strategy (redo this page since race changed!)
         </MudText>
     </TitleContent>
     <DialogContent>
-        <MudGrid Spacing="2">
+        <MudGrid>
             <MudItem xs="6">
                 <MudPaper>
                     <MudTable T="EditStrategyTyreModel" Items="@model.StrategyTyres">
