--- a/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
@@ -9,24 +9,32 @@
                     <MudTextField T="string" @bind-Value="model.Name" Label="Name" />
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_skillRanges" RangeType="RangeType.Skill">
-                        <MudText Typo="Typo.h6">Skill</MudText>
-                    </RangeInput>
+                    <MudPaper Elevation="5" Class="pa-4">
+                        <RangeInput Items="_skillRanges" RangeType="RangeType.Skill">
+                            <MudText Typo="Typo.h6">Skill</MudText>
+                        </RangeInput>
+                    </MudPaper>
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_ageRanges" RangeType="RangeType.Age">
-                        <MudText Typo="Typo.h6">">Age</MudText>
-                    </RangeInput>
+                    <MudPaper Elevation="5" Class="pa-4">
+                        <RangeInput Items="_ageRanges" RangeType="RangeType.Age">
+                            <MudText Typo="Typo.h6">">Age</MudText>
+                        </RangeInput>
+                    </MudPaper>
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_teamRanges" RangeType="RangeType.Team">
-                        <MudText Typo="Typo.h6">Team</MudText>
-                    </RangeInput>
+                    <MudPaper Elevation="5" Class="pa-4">
+                        <RangeInput Items="_teamRanges" RangeType="RangeType.Team">
+                            <MudText Typo="Typo.h6">Team</MudText>
+                        </RangeInput>
+                    </MudPaper>
                 </MudItem>
                 <MudItem xs="6">
-                    <RangeInput Items="_engineRanges" RangeType="RangeType.Engine">
-                        <MudText Typo="Typo.h6">">Engine</MudText>
-                    </RangeInput>
+                    <MudPaper Elevation="5" Class="pa-4">
+                        <RangeInput Items="_engineRanges" RangeType="RangeType.Engine">
+                            <MudText Typo="Typo.h6">">Engine</MudText>
+                        </RangeInput>
+                    </MudPaper>
                 </MudItem>
             </MudGrid>
         </MudForm>
