--- a/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/DriverEditor.razor
@@ -2,22 +2,26 @@
     <TitleContent>
         <MudText>
             <MudIcon Icon="@Icons.Material.Filled.Add" Class="mr-3 mb-n1" />
-            Add new driver
+            Driver moment
         </MudText>
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model">
             <MudGrid>
                 <MudItem xs="8">
-                    <MudTextField T="string" @bind-Value="model.FirstName" Label="FirstName" />
-                    <MudTextField T="string" @bind-Value="model.LastName" Label="LastName" />
+                    <MudStack Row="true" Spacing="4">
+                        <MudTextField T="string" @bind-Value="model.FirstName" Label="FirstName" />
+                        <MudTextField T="string" @bind-Value="model.LastName" Label="LastName" />
+                    </MudStack>
                     <MudTextField T="string" @bind-Value="model.Abbreviation" Label="Abbreviation" />
                     <MudDatePicker @bind-Date="@dateSetter" Label="Date of birth" />
                     <MudCountrySelect @bind-Value="model.Country" />
                     <MudTextField T="string" @bind-Value="model.Biography" Label="Biography" />
                 </MudItem>
+
                 <MudItem xs="4">
-                    <MudText>Traits bla bla</MudText>
+                    <MudText>Traits for drivers</MudText>
+                    @* Use MidChipSet also more often in favour of select when there are few options! (1 click > 2 click) *@
                     <MudChipSet @bind-SelectedValues="selectedTraits" MultiSelection="true" Filter="true">
                         @foreach (var trait in Traits)
                         {
