--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -4,6 +4,7 @@
     </TitleContent>
     <DialogContent>
         <MudForm Model="@model">
+            <MudTextField T="string" @bind-Value="model.Name" Label="Name" />
             <MudGrid Spacing="2">
                 <MudItem xs="6">
                     <MudTextField T="string" @bind-Value="model.Name" Label="Name" />
